--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <title>Home | PARKकर®️</title>
   </head>
   <body>
-    <!-- <div id="loader">
+    <div id="loader">
       <h3>Tomorrow's</h3>
       <h3>Brand,</h3>
       <h3>Today "</h3>
-    </div> -->
+    </div>
     <div id="main">
       <div id="page1">
         <div id="cursor"><h5>Book your slot</h5></div>
