Made some changes in navabar and added footer

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <title>Home | PARKकर®️</title>
   </head>
   <body>
-    <div id="loader">
+    <!-- <div id="loader">
       <h3>Tomorrow's</h3>
       <h3>Brand,</h3>
       <h3>Today "</h3>
-    </div>
+    </div> -->
     <div id="main">
       <div id="page1">
-        <div id="cursor"><h5>Book your slot</h5></div>
+        <div id="cursor"><h5>Book</h5><h5> your</h5><h5> slot</h5></div>
         <!-- <video autoplay loop muted src="bgVideo.mp4"></video> -->
         <div id="page1-content">
           <nav>
@@ -32,7 +32,7 @@
               <h4><a href="#">Sign In</a></h4>
               <h4><a href="#">Log In</a></h4>
               <h4 id="menu"><a href="">Menu</a></h4>
-              <div class="mega-box">
+              <!-- <div class="mega-box">
                 <div class="content">
                   <div class="row">
                     <h2 style="font-family: rejoy">parkकर</h2>
@@ -45,7 +45,7 @@
                     </ul>
                   </div>
                 </div>
-              </div>
+              </div> -->
             </div>
           </nav>
           <h1>
@@ -114,6 +114,29 @@
               <div class="swiper-pagination"></div>
             </div>
           </div>
+        </div>
+      </div>
+      <div id="page5">
+        <div id="top">
+          <div id="top-left">
+            <h2>Relax. We've got you.</h2>
+            <button>Book your Slot!</button>
+          </div>
+          <div id="top-right">
+            <h3><a href="#page2">About us.</a></h3>
+            <h3><a href="#page3">List-Parking</a></h3>
+            <h3><a href="#page3">Find Parking</a></h3>
+          </div>
+        </div>
+        <div id="center">
+          <h3>Made with ❤️ by our team.</h3>
+          <h3>©️2024 legal</h3>
+        </div>
+        <div id="bottom">
+          <h1>
+            <span>p</span><span>a</span><span>r</span><span>k</span
+            ><span>क</span><span>र</span>
+          </h1>
         </div>
       </div>
     </div>
