--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     </div> -->
     <div id="main">
       <div id="page1">
-        <div id="cursor"><h5>Book</h5><h5> your</h5><h5> slot</h5></div>
+        <div id="cursor">
+          <h5>Book</h5>
+          <h5>your</h5>
+          <h5>slot</h5>
+        </div>
         <!-- <video autoplay loop muted src="bgVideo.mp4"></video> -->
         <div id="page1-content">
           <nav>
@@ -89,11 +93,42 @@
         </div>
       </div>
       <div id="page3">
+        <div class="wave-2">
+          <svg
+            data-name="Layer 1"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1200 120"
+            preserveAspectRatio="none"
+          >
+            <path
+              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
+              class="shape-fill"
+            ></path>
+          </svg>
+        </div>
         <div id="page3-top">
           <h2>Explore our services</h2>
-          <div id="page3-content">
-            <div id="list-parking"></div>
-            <div id="find-parking"></div>
+          <hr />
+        </div>
+        <div id="page3-content">
+          <div id="list-parking">
+            <h2>List Parking?</h2>
+            <div id="para">
+              <h3>Ready to join our community?</h3>
+              <h3>List your parking space today,</h3>
+              <h3>
+                <span style="color: yellow">& </span> Start earning effortlessly!
+              </h3>
+            </div>
+            <button>Enlist</button>
+          </div>
+          <div id="find-parking">
+            <h2>Find Parking?</h2>
+            <h3>Explore your options:</h3>
+            <div id="options">
+              <button>Public Parking</button>
+              <button>Private Parking</button>
+            </div>
           </div>
         </div>
       </div>
@@ -124,8 +159,8 @@
           </div>
           <div id="top-right">
             <h3><a href="#page2">About us.</a></h3>
-            <h3><a href="#page3">List-Parking</a></h3>
-            <h3><a href="#page3">Find Parking</a></h3>
+            <h3><a href="#list-parking">List Parking</a></h3>
+            <h3><a href="#find-parking">Find Parking</a></h3>
           </div>
         </div>
         <div id="center">
