--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <title>Home | PARKकर®️</title>
   </head>
   <body>
-    <!-- <div id="loader">
+    <div id="loader">
       <h3>Tomorrow's</h3>
       <h3>Brand,</h3>
       <h3>Today "</h3>
-    </div> -->
+    </div>
     <div id="main">
       <div id="page1">
         <div id="cursor">
@@ -117,7 +117,8 @@
               <h3>Ready to join our community?</h3>
               <h3>List your parking space today,</h3>
               <h3>
-                <span style="color: yellow">& </span> Start earning effortlessly!
+                <span style="color: yellow">& </span> Start earning
+                effortlessly!
               </h3>
             </div>
             <button>Enlist</button>
