--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <h5>your</h5>
           <h5>slot</h5>
         </div>
-        <!-- <video autoplay loop muted src="bgVideo.mp4"></video> -->
+        <video autoplay loop muted src="1.mp4"></video>
         <div id="page1-content">
           <nav>
             <h3><a href="#">The Parking Allotment Venture.</a></h3>
@@ -36,20 +36,6 @@
               <h4><a href="#">Sign In</a></h4>
               <h4><a href="#">Log In</a></h4>
               <h4 id="menu"><a href="">Menu</a></h4>
-              <!-- <div class="mega-box">
-                <div class="content">
-                  <div class="row">
-                    <h2 style="font-family: rejoy">parkकर</h2>
-                  </div>
-                  <div class="row">
-                    <ul class="mega-links">
-                      <li><a href="#page2">About us</a></li>
-                      <li><a href="#page3">List Parking</a></li>
-                      <li><a href="#page3">Find Parking</a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div> -->
             </div>
           </nav>
           <h1>
@@ -57,55 +43,8 @@
             ><span>क</span><span>र</span>
           </h1>
         </div>
-        <div class="wave">
-          <svg
-            data-name="Layer 1"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1200 120"
-            preserveAspectRatio="none"
-          >
-            <path
-              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-              class="shape-fill"
-            ></path>
-          </svg>
-        </div>
       </div>
-      <div id="page2">
-        <div id="page2-top">
-          <div id="heading">
-            <h4>Optimization. Implementation. Innovation.</h4>
-            <h4>Two Allotment Models</h4>
-          </div>
-        </div>
-        <hr
-          class="m-b:10fx block h:0.5px bg:#00000080 transform origin:0,0 scale-x:0 (.in-view):scale-x:1 (.in-view):tween:all,1.6s,easeOut"
-        />
-        <div class="elem">
-          <h1>
-            Welcome to our cutting-edge parking allotment system powered by
-            machine learning! As a pioneer in innovative solutions for modern
-            businesses, we are committed to revolutionizing the way companies
-            manage their parking spaces. Our mission is simple: to provide
-            founders and businesses with an unparalleled advantage in optimizing
-            their parking resources.
-          </h1>
-        </div>
-      </div>
-      <div id="page3">
-        <div class="wave-2">
-          <svg
-            data-name="Layer 1"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1200 120"
-            preserveAspectRatio="none"
-          >
-            <path
-              d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z"
-              class="shape-fill"
-            ></path>
-          </svg>
-        </div>
+      <!-- <div id="page3">
         <div id="page3-top">
           <h2>Explore our services</h2>
           <hr />
@@ -132,23 +71,37 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <div id="page4">
         <div id="page4-top">
           <h1>Get in touch.</h1>
-          <div id="swiperDiv">
-            <div class="swiper mySwiper">
-              <div class="swiper-wrapper">
-                <div class="swiper-slide">Slide 1</div>
-                <div class="swiper-slide">Slide 2</div>
-                <div class="swiper-slide">Slide 3</div>
-                <div class="swiper-slide">Slide 4</div>
-                <div class="swiper-slide">Slide 5</div>
+          <h3>
+            Welcome to our cutting-edge parking management system driven by
+            machine learning! We're dedicated to transforming how businesses
+            handle parking, giving founders and companies a unique edge in
+            resource optimization.
+          </h3>
+        </div>
+        <hr style="width: 96%; margin: auto" />
+        <div id="swiperDiv">
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="Images/5.jpg" alt="" />
+                <img src="Images/7.jpg" alt="" />
+                <img src="Images/6.jpg" alt="" />
+                <img src="Images/8.jpg" alt="" />
               </div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
+              <div class="swiper-slide">
+                <img src="Images/1.jpg" alt="" />
+                <img src="Images/2.jpg" alt="" />
+                <img src="Images/3.jpg" alt="" />
+                <img src="Images/4.jpg" alt="" />
+              </div>
             </div>
+            <!-- <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div> -->
           </div>
         </div>
       </div>
