--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="Images/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
@@ -16,11 +16,11 @@
     <title>Home | PARKकर®️</title>
   </head>
   <body>
-    <div id="loader">
+    <!-- <div id="loader">
       <h3>Tomorrow's</h3>
       <h3>Brand,</h3>
       <h3>Today "</h3>
-    </div>
+    </div> -->
     <div id="main">
       <div id="page1">
         <div id="cursor">
@@ -28,7 +28,7 @@
           <h5>your</h5>
           <h5>slot</h5>
         </div>
-        <video autoplay loop muted src="1.mp4"></video>
+        <video autoplay loop muted src="Video\1.mp4"></video>
         <div id="page1-content">
           <nav>
             <h3><a href="#">The Parking Allotment Venture.</a></h3>
@@ -44,10 +44,9 @@
           </h1>
         </div>
       </div>
-      <!-- <div id="page3">
+      <div id="page3">
         <div id="page3-top">
           <h2>Explore our services</h2>
-          <hr />
         </div>
         <div id="page3-content">
           <div id="list-parking">
@@ -71,7 +70,7 @@
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
       <div id="page4">
         <div id="page4-top">
           <h1>Get in touch.</h1>
